exam2/results.txt
[X] +1  Code compiles without errors
[-] +1  Code compiles without warnings
exam2.c: In function ‘main’:
exam2.c:145:6: error: unused variable ‘highvlow’
  int highvlow = 0;
      ^

[-] +1  Program runs without crashing
timeout: the monitored command dumped core
Segmentation fault

Reading symbols from TESTME...done.
[New LWP 14698]
Core was generated by `./TESTME'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __strcmp_sse2_unaligned ()
    at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:31
#0  __strcmp_sse2_unaligned ()
    at ../sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S:31
#1  0x0000000000400b1e in main (ardc=1, argv=0x7fffa36b7028) at exam2.c:154

[-] +1  Program outputs correct answer for sample input provided
1d0
< 2 5 1 6 7 3 8 4

[-] +1  Program outputs correct answer for additional test input
1d0
< 10 1 2 9 8 3 7 6 4 5

[-] +1  Valgrind passes
[-] +1  Program reads data in the format provided
[-] +1  Program output is formatted correctly
[X] +1  Program calls queue_add() for each input
[X] +1  Program calls queue_remove() for each output
[X] +1  Program services high priority items before low priority items
[-] +1  Program services high priority items twice as often as low priority items
[-] +1  Program services items until both queues are empty
4 / 13
